# UnleashedRecomp-Android

./: CHANGELOG.md  CMakePresets.json  README.md
.github/workflows/: build_apk.yml
UnleashedRecomp/: CMakeLists.txt  app.cpp  main.cpp
UnleashedRecomp/apu/driver/: sdl2_driver.cpp
UnleashedRecomp/cpu/: guest_thread.cpp  guest_thread.h
UnleashedRecomp/gpu/: video.cpp
UnleashedRecomp/kernel/: heap.cpp  imports.cpp  memory.cpp
UnleashedRecomp/locale/: config_locale.cpp
UnleashedRecomp/mod/: ini_file.h  ini_file.inl  mod_loader.cpp
UnleashedRecomp/os/: logger.h
UnleashedRecomp/os/android/: logger_android.cpp  page_watch.cpp  page_watch.h  storage_android.cpp  storage_android.h  vulkan_driver_android.cpp
UnleashedRecomp/os/linux/: logger_linux.cpp
UnleashedRecomp/os/win32/: logger_win32.cpp
UnleashedRecomp/patches/: misc_patches.cpp
UnleashedRecomp/ui/: options_menu.cpp  touch_controls.cpp  touch_controls.h
UnleashedRecomp/user/: config.cpp  config.h  config_def.h
UnleashedRecompLib/: CMakeLists.txt
UnleashedRecompLib/ppc/: ppc_detail.h
android-apk/app/: build.gradle
android-apk/app/src/main/res/values/: strings.xml
android-apk/app/src/main/res/values-de/: strings.xml
android-apk/app/src/main/res/values-es/: strings.xml
android-apk/app/src/main/res/values-fr/: strings.xml
android-apk/app/src/main/res/values-it/: strings.xml
android-apk/app/src/main/res/values-ja/: strings.xml
android-apk/app/src/main/res/values-pt/: strings.xml
android-apk/app/src/main/res/values-ru/: strings.xml
driver/: README.md
tools/XenonRecomp/XenonRecomp/: CMakeLists.txt
(+3 files in other folders)
